# e2e_aichallenge_playground

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  README.md  TinyLidarNet.txt  TinyLidarNet_readme.md  TinyLidarNet_summary.md  docker-compose.yml  executor.md  latest  latest_output  mlops.md  mlops0101.md  mlops0102.md  planning.md  profile.speedscope.json  pyproject.toml  run_log.txt  simulation_log.json  summarize_results.py  test_config_loading.py  test_dynamic_sim.py  test_worktree_script.py
.github/workflows/: integration-tests.yml  pages-deploy.yml  pre-commit.yml  unit-tests.yml
ad_components/control/mpc_lateral_controller/: pyproject.toml
ad_components/control/mpc_lateral_controller/src/mpc_lateral_controller/: __init__.py  mpc_lateral_controller_node.py  mpc_solver.py
ad_components/control/mppi_controller/: pyproject.toml
ad_components/control/mppi_controller/src/mppi_controller/: __init__.py  mppi.py  mppi_controller_node.py
ad_components/control/mppi_controller/tests/: test_mppi.py
ad_components/control/pid_controller/: pyproject.toml
ad_components/control/pid_controller/src/pid_controller/: controller.py  default.param.yaml  pid_controller_node.py
ad_components/control/pid_controller/tests/: test_pid_controller_node.py
ad_components/control/pure_pursuit_controller/: pyproject.toml
ad_components/control/pure_pursuit_controller/src/pure_pursuit_controller/: __init__.py  pure_pursuit_controller_node.py
ad_components/control/spatial_temporal_lidar_net/: pyproject.toml
ad_components/control/spatial_temporal_lidar_net/scripts/: train.py
ad_components/control/spatial_temporal_lidar_net/src/spatial_temporal_lidar_net/: config.py  dataset.py  model.py  node.py
ad_components/control/tiny_lidar_net/: README.md  pyproject.toml
ad_components/control/tiny_lidar_net/ckpt/: tinylidarnet_weights.npy
ad_components/control/tiny_lidar_net/scripts/: convert_weight.py  evaluate_node.py  extract_data_from_mcap.py  inspect_mcap.py  train.py
ad_components/control/tiny_lidar_net/scripts/lib/: data.py  loss.py  model.py
ad_components/control/tiny_lidar_net/src/tiny_lidar_net/: __init__.py  config.py  core.py  node.py
ad_components/control/tiny_lidar_net/src/tiny_lidar_net/model/: __init__.py  tinylidarnet.py
ad_components/control/tiny_lidar_net/src/tiny_lidar_net/model/numpy/: __init__.py  initializers.py  layers.py
ad_components/control/tiny_lidar_net/tests/: test_tiny_lidar_net_node.py
ad_components/core/: pyproject.toml
ad_components/perception/ideal_sensor/: pyproject.toml
ad_components/perception/ideal_sensor/src/ideal_sensor/: sensor_node.py
ad_components/perception/ideal_sensor/tests/: test_ideal_sensor_node.py
ad_components/planning/centerline_planner/: pyproject.toml
ad_components/planning/centerline_planner/src/centerline_planner/: __init__.py  centerline_planner_node.py
ad_components/planning/lateral_shift_planner/: README.md  pyproject.toml
ad_components/planning/lateral_shift_planner/src/lateral_shift_planner/: __init__.py  frenet_converter.py  lateral_shift_planner.py  lateral_shift_planner_node.py  map_utils.py  obstacle_manager.py  shift_profile.py
ad_components/planning/lateral_shift_planner/tests/: test_avoidance_planner.py  test_frenet_converter.py
ad_components/planning/mpc_planner/: pyproject.toml
ad_components/planning/mpc_planner/src/mpc_planner/: __init__.py  collision_checker.py  mpc_planner_node.py  vehicle_model.py
ad_components/planning/static_avoidance_planner/: pyproject.toml
ad_components/planning/static_avoidance_planner/src/static_avoidance_planner/: __init__.py  avoidance_planner.py  avoidance_planner_node.py  frenet_converter.py  map_utils.py  obstacle_manager.py  shift_profile.py
ad_components/planning/static_avoidance_planner/tests/: test_avoidance_planner_node.py  test_obstacle_manager.py  test_shift_profile.py
checkpoints/: best_model.pth  last_model.pth
checkpoints/test_tiny/: best_model.pth  last_model.pth
checkpoints/tiny_lidar_net_v6_1500/: best_model.npy  best_model.pth  last_model.pth
checkpoints/tiny_lidar_net_v7_3000/: best_model.npy  best_model.pth  last_model.pth
configs/experiments/: imitation_learning.yaml  pure_pursuit.yaml
core/: README.md  TEST_SPEC.md  pyproject.toml  pytest.ini
core/tests/: test_config.py  test_data.py  test_geometry.py  test_interfaces.py  test_lanelet_map.py  test_mcap_utils.py  test_node_validation.py  test_ros.py  test_transforms.py
dashboard/: README.md  inject_data.py  pyproject.toml
dashboard/frontend/: index.html
dashboard/src/: verify_osm.py
dashboard/tests/: dummy_data.py
docker/mcap_server/: Dockerfile  mcap_server.py
docs/: Makefile  example.md  implementation_policy.md  old_blog_structure_proposal.md  performance_optimization_plan.md  tech_blog_template.md  tech_blog_writing_guidelines.md
docs/blog_vol1_simulator/: content.md  (+1 more)
experiment/: pyproject.toml
experiment-tracking-server/: README.md
experiment_runner/: README.md  pyproject.toml
experiment_runner/src/experiment_runner/: cli.py  runner.py
experiment_runner/tests/: test_integration.py
logger/: pyproject.toml
mlflow/: README.md  compose.yml
models/: tinylidarnet_v2.npy
scripts/: analyze_steering.py  benchmark_parallel_simulation.py  check_mcap_topics.py  collect_data.py  debug_json_ranges.py  debug_simulator_response.py  debug_steering.py  demo_lidar_fix.py  diagnostic_mcap.py  extract_mcap_to_csv.py  generate_architecture_diagram.py  inspect_mcap.py  inspect_mcap_comparison.py  plot_steering.py  prepare_fine_tuning_data.py  prepare_fine_tuning_data_v2.py  prepare_fine_tuning_data_v3.py  profile_experiment.py  read_steering_messages.py  reproduce_issue.py  run_evaluation_benchmark.sh  run_experiment.py  split_successful_data.py  train.py  visualize_lidar_comparison.py
simulator/: README.md  pyproject.toml
simulators/: README.md  pyproject.toml
supervisor/: pyproject.toml
supervisor/src/supervisor/: __init__.py  supervisor_node.py
tools/: pyproject.toml
visualization/: README.md  pyproject.toml
(+352 files in other folders)
