[project]
name = "e2e-aichallenge-playground"
version = "0.1.0"
description = "End-to-end AI Challenge Playground"
requires-python = ">=3.12"
dependencies = [
    "experiment-runner",
]

[project.optional-dependencies]
dev = [
    "deptry>=0.12.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "lark>=1.0.0",
    "ruff>=0.8.0",
    "pure-pursuit",
    "planning-utils",
    "pid-controller",
    "neural-controller",
    "simulator-core",
    "simulator-kinematic",
    "simulator-dynamic",
]

[tool.uv]
managed = true

[tool.uv.sources]
experiment-runner = { workspace = true }
pure-pursuit = { workspace = true }
planning-utils = { workspace = true }
pid-controller = { workspace = true }
neural-controller = { workspace = true }
simulator-core = { workspace = true }
simulator-kinematic = { workspace = true }
simulator-dynamic = { workspace = true }

[tool.uv.workspace]
members = [
    "core",
    "dashboard",
    "experiment/runner",
    "simulators/simulator_core",
    "simulators/simulator_kinematic",
    "simulators/simulator_dynamic",
    "component_packages/planning/pure_pursuit",
    "component_packages/planning/planning_utils",
    "component_packages/control/pid",
    "component_packages/control/neural_controller",
    "experiment/training",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "SLF",    # flake8-self (private member access detection)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (allow if-else for readability)
    "ERA001", # Commented-out code (false positives on Japanese comments)
    "RUF002", # Ambiguous unicode characters (allow fullwidth parentheses in Japanese)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["SLF001"]  # Allow private access in tests
"core/src/core/data/**" = ["ERA001"]  # Allow Japanese section comments
