[project]
name = "mpc-lateral-controller"
version = "0.1.0"
description = "MPC-based lateral controller for path tracking"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
    "cvxpy>=1.4.0",
    "numpy",
]

[project.entry-points."e2e_aichallenge.node"]
MPCLateralControllerNode = "mpc_lateral_controller:MPCLateralControllerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpc_lateral_controller"]

[tool.uv.sources]
core = { workspace = true }
