[project]
name = "pid-controller"
version = "0.1.0"
description = "PID controller"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
]


[project.entry-points."ad_components"]
"PIDController" = "pid_controller:PIDController"

[project.entry-points."e2e_aichallenge.node"]
PIDControllerNode = "pid_controller:PIDControllerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pid_controller"]

[tool.uv.sources]
core = { workspace = true }
ad-component-core = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["pid_controller"]
