[project]
name = "spatial-temporal-lidar-net"
version = "0.1.0"
description = "Spatial-Temporal LiDAR Net controller with frame stacking"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
    "numpy",
    "torch",
]

[project.entry-points."e2e_aichallenge.node"]
SpatialTemporalLidarNetNode = "spatial_temporal_lidar_net.node:SpatialTemporalLidarNetNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_temporal_lidar_net"]

[tool.uv.sources]
core = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["spatial_temporal_lidar_net"]
