[project]
name = "tiny-lidar-net"
version = "0.1.0"
description = "Tiny LiDAR Net end-to-end controller"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
    "numpy",
]

[project.entry-points."e2e_aichallenge.node"]
TinyLidarNetNode = "tiny_lidar_net.node:TinyLidarNetNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_lidar_net"]

[tool.uv.sources]
core = { workspace = true }

[tool.deptry]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP003 = ["tiny_lidar_net"]
