[project]
name = "ideal-sensor"
version = "0.1.0"
description = "Ideal sensor node for simulation"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pydantic",
]

[project.entry-points."e2e_aichallenge.node"]
IdealSensorNode = "ideal_sensor.sensor_node:IdealSensorNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ideal_sensor"]

[tool.uv.sources]
core = { workspace = true }
