[project]
name = "centerline-planner"
version = "0.1.0"
description = "Simple centerline trajectory planner"
requires-python = ">=3.12"
dependencies = [
    "core",
    "planning-utils",
]

[project.entry-points."e2e_aichallenge.node"]
CenterlinePlannerNode = "centerline_planner:CenterlinePlannerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/centerline_planner"]

[tool.uv.sources]
core = { workspace = true }
planning-utils = { workspace = true }
