[project]
name = "mpc-planner"
version = "0.1.0"
description = "MPC-based trajectory planner with obstacle avoidance"
requires-python = ">=3.12"
dependencies = [
    "core",
    "ad-component-core",
    "planning-utils",
    "casadi>=3.6.0",
    "numpy>=1.24.0",
]

[project.entry-points."e2e_aichallenge.node"]
"mpc_planner.MPCPlannerNode" = "mpc_planner:MPCPlannerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpc_planner"]

[tool.uv.sources]
core = { workspace = true }
ad-component-core = { workspace = true }
planning-utils = { workspace = true }
