[project]
name = "static-avoidance-planner"
version = "0.1.0"
description = "Static avoidance planner based on CSV map data"
requires-python = ">=3.12"
dependencies = [
    "core",
    "planning-utils",
    "numpy",
    "scipy",
]

[project.entry-points."e2e_aichallenge.node"]
AvoidancePlannerNode = "static_avoidance_planner:AvoidancePlannerNode"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/static_avoidance_planner"]

[tool.uv.sources]
core = { workspace = true }
planning-utils = { workspace = true }
